--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
-
             </intent-filter>
         </activity>
 
@@ -29,10 +28,13 @@
             android:label="@string/tile_spotlog"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action
-                    android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+
+        <service
+            android:name=".LoggerService"
+            android:enabled="true" />
     </application>
 
 </manifest>
