--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.60'
+    ext {
+        kotlin_version = '1.2.60'
+        supportLibraryVersion = '28.0.0-beta01'
+        lifecycleVersion = '1.1.1'
+        roomVersion = '1.1.1'
+        constraintLayoutVersion = '1.1.2'
+    }
     repositories {
         google()
         jcenter()
