--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,19 @@
 buildscript {
     ext {
         kotlin_version = '1.2.60'
-        supportLibraryVersion = '28.0.0-beta01'
+        supportLibraryVersion = '28.0.0-rc01'
         lifecycleVersion = '1.1.1'
         roomVersion = '1.1.1'
         constraintLayoutVersion = '1.1.2'
+        nav_version = "1.0.0-alpha05"
+
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
