--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.samudev.spotlog">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+
     <application
         android:name=".SpotLogApplication"
         android:allowBackup="true"
@@ -35,7 +38,9 @@
 
         <service
             android:name=".LoggerService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:permission="android.permission.FOREGROUND_SERVICE"/>
+
     </application>
 
 </manifest>
