--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-
     <application
         android:name=".SpotLogApplication"
         android:allowBackup="true"
@@ -39,8 +38,7 @@
 
         <service
             android:name=".service.LoggerService"
-            android:enabled="true"
-            android:permission="android.permission.FOREGROUND_SERVICE"/>
+            android:enabled="true"/>
 
     </application>
 
