--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.0'
     defaultConfig {
-        applicationId "com.samudev.spotlog"
+        applicationId "com.developments.samu.spotlog"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
