--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.2.61'
-        supportLibraryVersion = '28.0.0-rc01'
+        kotlin_version = '1.2.71'
+        supportLibraryVersion = '28.0.0'
         lifecycleVersion = '1.1.1'
         roomVersion = '1.1.1'
-        constraintLayoutVersion = '1.1.2'
-        nav_version = "1.0.0-alpha05"
+        constraintLayoutVersion = '1.1.3'
+        nav_version = "1.0.0-alpha06"
 
     }
     repositories {
@@ -15,7 +15,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha07'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
