--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     def preference_version = "1.1.1"
+    def room_version = "2.2.5"
+
     def dagger_version = "2.27"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -51,10 +54,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.preference:preference-ktx:$preference_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2' // use -ktx for Kotlin
